compiler/actonc/test/typeerrors/actor_self_reserved_assignment.act
actor Test():
    self, x = 1, 2